fixed footer overlapping with main content

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   min-height: calc(100vh - 95px);
+  margin-bottom: 6rem;
 }
 
 .App-logo {
